@@ -65,9 +65,9 @@ public class WebTest2 {
 
     private void invoke() throws Exception {
 
-        URL url = new URL("http://" + host  + ":" + port + contextRoot
+        URL url = URI.create("http://" + host  + ":" + port + contextRoot
                           + "/CheckAccessLog?location="
-                          + URLEncoder.encode(location));
+                          + URLEncoder.encode(location)).toURL();
         System.out.println("Connecting to: " + url.toString());
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.connect();
