@@ -48,7 +48,7 @@ public class WebTest {
     public void doTest() {
 
         try {
-            URL url = new URL("http://" + host  + ":" + port + contextRoot);
+            URL url = URI.create("http://" + host  + ":" + port + contextRoot).toURL();
             System.out.println("Connecting to: " + url.toString());
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.connect();
