@@ -65,8 +65,8 @@ public class WebTest {
         BufferedReader input = null;
 
         try {
-            URL url = new URL("http://" + host  + ":" + port +
-                contextRoot + "/" + path);
+            URL url = URI.create("http://" + host  + ":" + port +
+                contextRoot + "/" + path).toURL();
             System.out.println("Connecting to: " + url.toString());
 
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
