@@ -37,7 +37,7 @@ public class WebTest{
             stat.addDescription("Standalone Servlet/Filter war test");
 
             System.out.println("Running test");
-            url = new URL("http://" + host  + ":" + port + contextRoot + "/ServletTest");
+            url = URI.create("http://" + host  + ":" + port + contextRoot + "/ServletTest").toURL();
             String originalLoc = url.toString();
             for (int k=0; k < 3; k++){
                 System.out.println("\n Invoking url: " + url.toString());
