@@ -22,6 +22,7 @@ import java.io.FileInputStream;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.security.KeyStore;
 import javax.net.ssl.HostnameVerifier;
@@ -77,7 +78,7 @@ public class HttpRedirectElement extends BaseDevTest {
 
     private HttpURLConnection getConnection(final String url) throws Exception {
         return secureRedirect
-            ? (HttpURLConnection) new URL(url).openConnection()
+            ? (HttpURLConnection) URI.create(url).toURL().openConnection()
             : doSSLHandshake(url, ssf);
     }
 
@@ -98,7 +99,7 @@ public class HttpRedirectElement extends BaseDevTest {
 
     private HttpsURLConnection doSSLHandshake(String urlAddress, SSLSocketFactory ssf)
         throws Exception {
-        URL url = new URL(urlAddress);
+        URL url = URI.create(urlAddress).toURL();
         HttpsURLConnection.setDefaultSSLSocketFactory(ssf);
         HttpsURLConnection.setFollowRedirects(true);
         HttpsURLConnection connection = (HttpsURLConnection) url.openConnection();
