@@ -63,9 +63,9 @@ public class YassonTest {
 
     private void invoke() throws Exception {
 
-        URL url = new URL("http://" + host  + ":" + port + contextRoot
+        URL url = URI.create("http://" + host  + ":" + port + contextRoot
                           + "/TransformToJson?parameter="
-                          + URLEncoder.encode(PARAMETER));
+                          + URLEncoder.encode(PARAMETER)).toURL();
         System.out.println("Connecting to: " + url.toString());
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.connect();
